LU-275 I/O errors when lustre uses multipath devices

Change set_blockdev_tunables() routines to make it support multipath
device case.

Author: Gregoire Pichon <gregoire.pichon@bull.net>
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: If7a7d4a1788bb5c5139d5a5b229272dc2f294713
Reviewed-on: http://review.whamcloud.com/504
Tested-by: Hudson
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>